--- a/landing(h).html
+++ b/landing(h).html
@@ -58,7 +58,7 @@
             <input type="text" id="name" name="name">
             <label for="email">Email:</label>
             <input type="email" id="email" name="email">
-            <label for="message">Message:</label>
+            <label for="message">hello Message:</label>
             <textarea id="message" name="message"></textarea>
             <button type="submit">Submit</button>
         </form>
